# PairsTrading_Project

./: .gitignore  README.md  pyproject.toml  setup.cfg
pairs_trading_pipeline/: crsp_puller.py  data_aggregator.py  data_processor.py  driver.py
pairs_trading_pipeline/GICS_Filtered_Equities/: GICS_10.pkl  GICS_15.pkl  GICS_25.pkl  GICS_30.pkl  GICS_45.pkl  GICS_50.pkl  GICS_55.pkl  GICS_60.pkl
pairs_trading_pipeline/archive/: driver.py
pairs_trading_pipeline/backtesting_engine/: portfolio_builder.py  run_rolling_backtest.py
pairs_trading_pipeline/config/: settings.py
pairs_trading_pipeline/data/: crsp_puller.py  data_aggregator.py  data_processor.py  dates_helper.py
pairs_trading_pipeline/features/: clustering.py  pca.py
pairs_trading_pipeline/helpers/: adapters.py  artifacts.py  pnl.py  rolling_engine.py  signals.py
pairs_trading_pipeline/models/: cointegration.py  spread.py
