[metadata]
name = pairs_trading_pipeline
version = 0.0.1
description = Pairs trading project
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.10
include_package_data = True
install_requires =
package_dir =
	= .

[options.packages.find]
where = .

[egg_info]
egg_base = .
